# playmusic

./: .travis.yml  CMakeLists.txt  README.md  configure.sh  playmusic  playmusic.cc  playmusic.h
include/: errorhandler.h  playmusic.h
src/: errorhandler.cc  main.cc  playmusic.cc
